--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,23 @@ body {
     background-attachment: fixed;
 }
 
+select {
+    font-family: 'Unkempt', cursive;
+    color: black;
+    text-align: left;
+    background-color: white;
+    font-family: 'Unkempt', cursive;
+    color: paleturquoise
+}
+
+.inline {
+    display: inline;
+}
+
+.drop {
+    color: black;
+}
+
 .filler {
     height: 60px;
 }
@@ -40,7 +57,12 @@ font-family: 'Bangers', cursive;
 .motto {
     font-size: 150px;
     font-family: 'Unkempt', cursive;
-    color: paleturquoise
+    ##color: paleturquoise
+}
+
+.small-motto {
+    font-family: 'Unkempt', cursive;
+    font-size: 120px; 
 }
 
 .desc {
@@ -70,45 +92,27 @@ font-family: 'Bangers', cursive;
 }
 
 /* Colors */
-.palegreen {
-    background-color: palegreen;
-}
+.palegreen { background-color: palegreen;}
+.green { background-color: rgba(179, 214, 167, 1);}
+.pink {background-color: hotpink;}
+.blue { background-color: rgba(125, 159, 232, 1);}
+.coral { background-color: lightcoral;}
+.pink { background-color: lightpink;}
+.darkpink { background-color: rgba(214, 94, 172, 1);}
+.purple { background-color: rgba(217, 183, 235, 1);}
+.orange { background-color: rgba(227, 138, 120, 1);}
+.yellow { background-color: rgba(222, 207, 93, 1 git);}
 
-.green {
-    background-color: rgba(179, 214, 167, 1);
-}
-
-.pink {
-    background-color: hotpink;
-}
-
-.blue {
-    background-color: rgba(125, 159, 232, 1);
-}
-
-.coral {
-    background-color: lightcoral;
-}
-
-.pink {
-    background-color: lightpink;
-}
-
-.darkpink {
-    background-color: rgba(214, 94, 172, 1);
-}
-
-.purple {
-    background-color: rgba(217, 183, 235, 1);
-}
-
-.orange {
-    background-color: rgba(227, 138, 120, 1);
-}
-
-.yellow {
-    background-color: rgba(222, 207, 93, 1 git);
-}
+.palegreen-text { color: palegreen;}
+.green-text { color: rgba(179, 214, 167, 1);}
+.pink-text {color: hotpink;}
+.blue-text { color: rgba(125, 159, 232, 1);}
+.coral-text { color: lightcoral;}
+.pink-text { color: lightpink;}
+.darkpink-text { color: rgba(214, 94, 172, 1);}
+.purple-text { color: rgba(217, 183, 235, 1);}
+.orange-text { color: rgba(227, 138, 120, 1);}
+.yellow-text { color: rgba(222, 207, 93, 1 git);}
 
 .icon {
     display: block;
@@ -133,7 +137,13 @@ font-family: 'Bangers', cursive;
     
 }
 
+.arrow-scroll {
+    width: 100%;
+    height: 190px;
+}
+
 .textbox { 
+    color: black;
     border: 1px solid #848484; 
     -webkit-border-radius: 30px; 
     -moz-border-radius: 30px; 
@@ -143,6 +153,12 @@ font-family: 'Bangers', cursive;
     width: 275px; 
     padding-left:10px; 
     padding-right:10px; 
-} 
+}
+
+.rounded {
+   -webkit-border-radius: 10px;
+   -moz-border-radius: 10px;
+   border-radius: 10px;
+}
 
 
